2007-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set prot='P' for ftps if PROT command fails.
	* IdNameCache.cc, IdNameCache.h: use Ref; use xstrcmp.

2007-10-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: handle timeouts when 150 reply is not received yet.

2007-10-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fix `wait all'.

2007-10-12  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: clear proxy_proto properly.
	* ftpclass.cc: (TurnOffStatForList) new method; fine tune STAT for LIST
	  handling for some servers.

2007-10-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Ref.h: (get) new method.
	* FileSet.cc: workaround for OSF/1 compiler.

2007-10-08  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc: fix xstring::cat.
	* xarray.h: drop automatic cast to T*.
	* Resolver.cc, Resolver.h: use explicit xarray::get.
	* SFtp.cc: fix type mismatch warning.

2007-10-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: handle and log STAT errors properly.

2007-09-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix for non-standard FEAT reply.
	* SFtp.cc, SFtp.h: use timer to flush imcomplete data.

2007-09-21  Alexander V. Lukyanov <lav@yars.free.net>

	* module.cc: use xstring; (access_so) new function.

2007-09-20  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc, LocalAccess.h: let other tasks run while doing
	  ListInfo; better status messages.
	* NetAccess.cc: optimize translations; use xstring::format.
	* FileSet.h: (count, curr_index, curr_pct) new methods.

2007-09-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: skip leading space in STAT reply.
	* resource.cc: add another server overload message.
	* MirrorJob.cc, MirrorJob.h: (depth-first, no-empty-dirs, ascii)
	  new options.
	* CmdExec.cc, CmdExec.h, complete.cc: (CmdByIndex) return cmd name.

2007-09-12  Alexander V. Lukyanov <lav@yars.free.net>
